--- a/04-test-homework/index.html
+++ b/04-test-homework/index.html
@@ -101,14 +101,14 @@
         <a class="footer-get-link" href="#">info@cloudbudget.com</a> <br />
         <a class="footer-get-tel" href="+18447217120">+1844-721-7120</a>
         <div class="footer-get-img">
-          <img src="./facebook.png" alt="" />
-          <img src="./linkedin.png" alt="" class="footer-ldn-img" />
-          <img src="./twitter.png" alt="" />
+          <img src="./img/facebook.png" alt="" />
+          <img src="./img/linkedin.png" alt="" class="footer-ldn-img" />
+          <img src="./img/twitter.png" alt="" />
         </div>
       </div>
       <div class="footer-support">
         <h3>We Support</h3>
-        <img src="./visa.png" width="216" height="31" alt="" />
+        <img src="./img/visa.png" width="216" height="31" alt="" />
       </div>
     </section>
   </body>
